--- a/Sharphook/Sharphook.csproj
+++ b/Sharphook/Sharphook.csproj
@@ -1,12 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+	<LangVersion>10.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <SignAssembly>False</SignAssembly>
-    <Version>0.0.0</Version>
+    <Version>0.0.1</Version>
+    <RepositoryUrl>https://github.com/Jodenee/Sharphook</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Jodenee/Sharphook</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
