--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
     
     strategy:
       matrix:
-        dotnet: [ '9.x.x', '8.x.x', '7.x.x', '6.x.x' ]
+        dotnet: [ '9.0.x', '8.x.x', '7.x.x', '6.x.x' ]
         
     steps:
     - uses: actions/checkout@v4
