--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,11 +12,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     strategy:
       matrix:
-        dotnet: [ '8.x.x', '7.x.x', '6.x.x' ]
+        dotnet: [ '9.x.x', '8.x.x', '7.x.x', '6.x.x' ]
         
     steps:
     - uses: actions/checkout@v4
